Change to react

--- a/index.html
+++ b/index.html
@@ -2,228 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>GPA Calculator — Institution Evaluator</title>
-		<script src="https://cdn.tailwindcss.com"></script>
-		<meta name="color-scheme" content="light dark" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>GPA Calculator</title>
 	</head>
-	<body class="bg-gray-50 text-gray-900 min-h-screen antialiased">
-		<header class="max-w-6xl mx-auto px-4 sm:px-6 pt-8 mb-10">
-			<div
-				class="flex flex-col gap-4 sm:flex-row sm:items-end sm:justify-between"
-			>
-				<div>
-					<h1 class="text-4xl font-black tracking-tight text-indigo-700">
-						GPA Calculator
-					</h1>
-					<p class="text-sm text-red-600 font-semibold italic mt-1">
-						This is to be used only by internal transcript team members.
-					</p>
-				</div>
-				<div class="flex items-center gap-2 flex-wrap">
-					<label class="text-sm font-medium text-gray-700" for="institution"
-						>Institution</label
-					>
-					<select
-						id="institution"
-						class="focus-ring rounded-xl border border-gray-300 bg-white px-3 py-2 text-sm"
-					>
-						<option value="BYUI" selected>BYU–Idaho (2 d.p.)</option>
-						<option value="Ensign">Ensign College (3 d.p.)</option>
-						<option value="Pathway">Pathway (2 d.p.)</option>
-					</select>
-					<button
-						id="clearAll"
-						class="rounded-xl border border-red-200 text-red-700 hover:bg-red-50 px-3 py-2 text-sm"
-					>
-						Clear All
-					</button>
-				</div>
-			</div>
-		</header>
-
-		<main class="max-w-6xl mx-auto px-4 sm:px-6 pb-24">
-			<!-- Terms Container -->
-			<section class="space-y-8" id="terms"></section>
-
-			<!-- End of Transcript Statistics -->
-			<section id="transcriptStats" class="mt-10">
-				<h2 class="text-xl font-bold text-gray-800 mb-3">
-					End of Transcript Statistics
-				</h2>
-				<div
-					class="w-full bg-white rounded-2xl ring-1 ring-gray-200 shadow-sm overflow-hidden"
-				>
-					<div
-						class="grid grid-cols-12 bg-gray-50 border-b border-gray-200 text-sm font-medium text-gray-600"
-					>
-						<div class="col-span-3 px-4 py-2">&nbsp;</div>
-						<div class="col-span-2 px-4 py-2 text-center">GPA</div>
-						<div class="col-span-2 px-4 py-2 text-center">Attempted</div>
-						<div class="col-span-2 px-4 py-2 text-center">Earned</div>
-						<div class="col-span-3 px-4 py-2 text-center">Quality Pts</div>
-					</div>
-					<!-- Transfer Row -->
-					<div
-						class="grid grid-cols-12 border-b border-gray-100 items-center text-sm"
-					>
-						<div class="col-span-3 px-4 py-2 font-semibold text-gray-800">
-							Transfer
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center text-gray-500">
-							— — —
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center text-gray-500">
-							— — —
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center">
-							<span
-								id="transferEarned"
-								contenteditable="true"
-								class="inline-block min-w-[3ch] text-gray-900 px-2 py-1 rounded-md border border-gray-200 focus-ring"
-								>0</span
-							>
-						</div>
-						<div class="col-span-3 px-4 py-2 text-center text-gray-500">
-							0.00
-						</div>
-					</div>
-					<!-- Institution Totals Row -->
-					<div
-						class="grid grid-cols-12 border-b border-gray-100 items-center text-sm"
-					>
-						<div class="col-span-3 px-4 py-2 font-semibold text-gray-800">
-							Institution Totals
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center" id="instGpa">
-							0.00
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center" id="instAttempted">
-							0
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center" id="instEarned">
-							0
-						</div>
-						<div class="col-span-3 px-4 py-2 text-center" id="instQP">0.00</div>
-					</div>
-					<!-- Overall Totals Row -->
-					<div class="grid grid-cols-12 items-center text-sm">
-						<div class="col-span-3 px-4 py-2 font-semibold text-gray-800">
-							Overall Totals
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center" id="overallGpa">
-							0.00
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center" id="overallAttempted">
-							0
-						</div>
-						<div class="col-span-2 px-4 py-2 text-center" id="overallEarned">
-							0
-						</div>
-						<div class="col-span-3 px-4 py-2 text-center" id="overallQP">
-							0.00
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- Controls -->
-			<div class="sticky bottom-4 mt-10 flex justify-center">
-				<button
-					id="addTerm"
-					class="rounded-2xl bg-green-600 hover:bg-green-700 text-white font-semibold px-5 py-3 shadow-lg"
-				>
-					+ Add Term
-				</button>
-			</div>
-		</main>
-
-		<!-- Row Template -->
-		<template id="rowTemplate">
-			<tr class="course-row" data-row-id="">
-				<td class="px-3 py-2">
-					<div class="relative w-40 sm:w-48 md:w-56">
-						<input
-							type="text"
-							placeholder="CSC 101"
-							class="focus-ring w-full p-2 pr-10 border border-gray-300 rounded-lg bg-white text-gray-700 placeholder-gray-400 courseName"
-						/>
-						<span
-							class="retakeStar hidden absolute right-2 top-1/2 -translate-y-1/2 text-indigo-600 font-bold"
-							>**</span
-						>
-					</div>
-				</td>
-				<td class="px-3 py-2">
-					<input
-						type="number"
-						min="0"
-						step="0.5"
-						placeholder="3"
-						class="focus-ring w-24 p-2 border border-gray-300 rounded-lg bg-white text-gray-700 placeholder-gray-400 units"
-					/>
-				</td>
-				<td class="px-3 py-2">
-					<select
-						class="focus-ring w-28 p-2 border border-gray-300 rounded-lg bg-white text-gray-700 grade"
-					></select>
-				</td>
-				<td class="px-3 py-2 text-center gradeVal font-semibold text-gray-800">
-					0.00
-				</td>
-				<td class="px-3 py-2 text-center quality font-semibold text-gray-900">
-					0.00
-				</td>
-				<td class="px-3 py-2">
-					<div class="flex flex-col gap-1 text-xs sm:text-sm">
-						<label class="flex items-center gap-2"
-							><input type="checkbox" class="retakeToggle" />
-							<span>Retake</span></label
-						>
-						<button
-							class="chooseRetake hidden rounded-md border border-gray-300 px-2 py-1"
-						>
-							Choose Course…
-						</button>
-					</div>
-				</td>
-				<td class="px-3 py-2 text-center">
-					<button class="removeRow text-red-600 hover:text-red-800">
-						Remove
-					</button>
-				</td>
-			</tr>
-		</template>
-
-		<!-- Retake Modal -->
-		<div id="retakeModal" class="hidden fixed inset-0 z-50">
-			<div class="absolute inset-0 bg-black/40" data-close="1"></div>
-			<div class="absolute inset-x-0 top-10 mx-auto max-w-xl">
-				<div
-					class="bg-white rounded-2xl shadow-xl ring-1 ring-gray-200 overflow-hidden"
-				>
-					<div class="flex items-center justify-between px-4 py-3 border-b">
-						<h3 class="font-semibold text-gray-800">
-							Select earlier course to replace
-						</h3>
-						<button
-							class="px-2 py-1 text-gray-500 hover:text-gray-700"
-							data-close="1"
-						>
-							✕
-						</button>
-					</div>
-					<div class="max-h-80 overflow-y-auto" id="retakeList"></div>
-					<div class="px-4 py-3 border-t text-right">
-						<button class="rounded-lg px-3 py-2 border" data-close="1">
-							Close
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<script src="app.js"></script>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
